# SPA

./: .gitignore  README.md  check-submission.py
Team00/Code00/src/spa/: CMakeLists.txt
Team00/Code00/src/spa/src/: EntRef.cpp  EntRef.h  EntityDeclaration.cpp  EntityDeclaration.h  ExpressionSpec.cpp  PQLQuery.cpp  PQLQuery.h  Pattern.cpp  Pattern.h  PatternClause.h  QueryEvaluator.cpp  QueryEvaluator.h  QueryObject.cpp  QueryObject.h  QueryReceiver.cpp  Relationship.cpp  Relationship.h  SelectClauseParser.cpp  SelectClauseParser.h  StmtNum.cpp  StmtNum.h  StmtRef.cpp  StmtRef.h  SuchThatClause.cpp  SuchThatClause.h  SuchThatRef.cpp  SuchThatRef.h
Team00/Code00/src/spa/src/PQL/: EntRef.h  PQLQuery.cpp  PatternClause.cpp  SuchThatClause.h
Team42/Code42/: '  (+2 more)
Team42/Code42/src/spa/: CMakeLists.txt
Team42/Code42/src/spa/src/PKB/: FollowsFunctions.hpp  PKB.cpp  PKB.h  ParentFunctions.hpp  PatternManager.cpp  PatternManager.h  ProcTable.cpp  ProcTable.h  Statement.cpp  Statement.h  StmtTable.cpp  StmtTable.h  TransitiveClosure.cpp  TransitiveClosure.h  UtilityFunctions.hpp  VarTable.h  Variable.h  VariableTable.cpp  VariableTable.h
Team42/Code42/src/spa/src/PKB/Entities/: Constant.cpp  Constant.h  Entity.hpp  Procedure.cpp  Procedure.h  Statement.cpp  Statement.h  Variable.cpp  Variable.h
Team42/Code42/src/spa/src/PKB/Tables/: ConstTable.cpp  ConstTable.h  ProcTable.cpp  ProcTable.h  StmtTable.cpp  StmtTable.h  Table.hpp  VarTable.cpp  VarTable.h
Team42/Code42/src/spa/src/PQL/: EntRef.cpp  EntityDeclaration.h  ExpressionSpec.h  PQLQuery.h  QueryObject.cpp  QueryObject.h  RelationshipQueryManager.h  SelectClauseParser.cpp  StmtRef.cpp  SuchThatClause.cpp  SuchThatRef.h  ent_ref.cpp  ent_ref.h  entity_declaration.cpp  entity_declaration.h  entity_declaration_parser.cpp  entity_declaration_parser.h  expression_spec.cpp  expression_spec.h  pattern_clause.cpp  pattern_clause.h  pattern_query_manager.cpp  pattern_query_manager.h  pql_query.cpp  pql_query.h  query_evaluator.cpp  query_evaluator.h  query_preprocessor.cpp  query_preprocessor.h  query_receiver.cpp  relationship_query_manager.cpp  select_clause_parser.cpp  select_clause_parser.h  stmt_ref.cpp  stmt_ref.h  such_that_clause.cpp  such_that_clause.h  such_that_ref.cpp  such_that_ref.h  uses_modifies_handler.cpp  (+3 more)
Team42/Code42/src/spa/src/PQL/evaluator/: follows_parents_handler.cpp  follows_parents_handler.h  query_evaluator.cpp  query_evaluator.h  relationship_query_manager.cpp  relationship_query_manager.h  uses_modifies_handler.cpp  uses_modifies_handler.h  usesp_modifiesp_handler.cpp  usesp_modifiesp_handler.h  usess_modifiess_handler.cpp
Team42/Code42/src/spa/src/PQL/preprocessor/: entity_declaration_parser.cpp  pql_query.cpp  query_preprocessor.h  select_clause_parser.cpp  such_that_clause.cpp
Team42/Code42/src/spa/src/parser/: AST.cpp  AST.hpp  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  Visitor.h  buffered_lexer.cpp  lexer.cpp  lexer.h  token.cpp
Team42/Code42/src/spa/src/parser/ast/: assign.cpp  ast.h  ast_utils.hpp  call.cpp  cond_expression.cpp  constant.cpp  expression.cpp  identifier.cpp  if.cpp  node.cpp  print.cpp  procedure.cpp  program.cpp  read.cpp  rel_expression.cpp  statement.cpp  while.cpp
Team42/Code42/src/spa/src/parser/lexer/: buffered_lexer.cpp  lexer.cpp  lexer.h  token.cpp
Team42/Code42/src/spa/src/parser/parse/: exception.cpp  parse.cpp  parse.h  parse_assign.cpp  parse_call.cpp  parse_cond_expression.cpp  parse_expression.cpp  parse_if.cpp  parse_print.cpp  parse_procedure.cpp  parse_program.cpp  parse_read.cpp  parse_rel_expression.cpp  parse_stmt_lst.cpp  parse_utils.cpp  parse_while.cpp
Team42/Code42/src/spa/src/pkb/: PatternManager.h  exception.cpp  exception.h  pattern_handler.cpp  pattern_handler.h  pattern_manager.cpp  pattern_manager.h  pkb.cpp  pkb.h  pkb_exception.cpp  pkb_exception.h  pkb_utils.cpp
Team42/Code42/src/spa/src/utils/: string_utils.cpp  string_utils.h
Team42/Code42/src/unit_testing/: CMakeLists.txt
Team42/Code42/src/unit_testing/src/: TestAST.cpp
Team42/Code42/src/unit_testing/src/PKB/: TestPKB.cpp  TestPatternManager.cpp
Team42/Code42/src/unit_testing/src/PQL/: test_entity_declaration_parser.cpp  test_pattern_query_manager.cpp  test_query_evaluator.cpp  test_query_preprocessor.cpp
Team42/Code42/src/unit_testing/src/parser/: TestLexer.cpp  TestParser.cpp  test_ast.cpp  test_lexer.cpp  test_parser.cpp
Team42/Code42/src/unit_testing/src/pkb/: test_constant.cpp  test_pattern_handler.cpp  test_pattern_manager.cpp  test_pkb.cpp  test_procedure.cpp
Team42/Code42/src/unit_testing/src/pql/: pkb_stub.hpp  test_calls_handler.cpp  test_entity_declaration_parser.cpp  test_follows_parent_handler.cpp  test_follows_parents_handler.cpp  test_pattern_query_manager.cpp  test_query_evaluator.cpp  test_query_optimizer.cpp  test_query_preprocessor.cpp  test_result_table.cpp  test_usesS_modifiesS_handler.cpp  test_usesp_modifiesp_handler.cpp  test_usess_modifiess_handler.cpp
(+182 files in other folders)
